@@ -44,4 +44,5 @@
     <string id="30511">Like</string>
     <string id="30512">Browse Channels</string>
     <string id="30513">What to watch</string>
+    <string id="30514">Related Videos</string>
 </strings>
