@@ -44,4 +44,5 @@
     <string id="30511">Gefällt mir</string>
     <string id="30512">Kanäle finden</string>
     <string id="30513">Empfohlene Videos</string>
+    <string id="30514">Ähnliche Videos</string>
 </strings>
