@@ -1,4 +1,5 @@
 1.0.0~alpha25 (2014-10-XX)
+ADD: 'Related Videos'
 UPD: show channel name in the description
 FIX: disable verification warnings
 
